--- a/public/css/style.css
+++ b/public/css/style.css
@@ -813,11 +813,20 @@ figure {
   }
 }
 
+#involvementMethods {
+  display: flex;
+  justify-content: space-between;
+}
+
 #fh5co-features {
   padding: 4em 0;
 }
 #fh5co-features .feature-left {
   margin-bottom: 0;
+}
+#fh5co-features .feature-left .feature-copy {
+  margin-bottom: 0;
+
 }
 @media screen and (max-width: 992px) {
   #fh5co-features .feature-left {
