--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1476,5 +1476,9 @@ figure {
   z-index: 9999;
   background: url(../images/hourglass.svg) center no-repeat #222222;
 }
+.img-responsive{
+  height: 450px;
+  width: auto;
+}
 
 /*# sourceMappingURL=style.css.map */
